--- a/gadgets/trunk/eXoGadgets.Ext/src/main/webapp/gadgets/GateInMonitoring/style.css
+++ b/gadgets/trunk/eXoGadgets.Ext/src/main/webapp/gadgets/GateInMonitoring/style.css
@@ -17,70 +17,207 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 
-.UIGrid {
-	border: 1px solid #b7b7b7;
+body {
+	font-family: Lucida Sans, Arial, Verdana, sans-serif;
+	margin: 0px;
+	font-size: 12px;
+	color: #626262;
+}
+
+img {
+	border: none;
+}
+
+a {
+	text-decoration: none;
+}
+
+.ClearFix:after {
+	content: ".";
+	display: block;
+	height: 0;
+	clear: both;
+	visibility: hidden;
+}
+
+.ClearFix {
+	!display: inline-block;
+	!zoom: 1;
+	!display: block; 
+}
+
+.FL {
+	float: left;
+}
+
+.FR {
+	float: right;
+}
+
+/******* UIGadget ********/
+
+.UIGadget {
+	width: 269px;
+	border: 1px solid #c3c3c3;
+	padding: 10px;
+	margin: 0px auto;
+    font-size: 11px;	
+}
+
+.UIGadgetCanvas {
+	width: auto;
+}
+
+.TopGadget {
+	padding: 10px;
+}
+
+.TopGadgetCanvas {
+	margin-left: 339px;
+}
+
+.Text {
+	font-family: Lucida Sans, Arial, Verdana, sans-serif;
+	font-size: 11px;
+}
+
+.TopGadget table td {
+	padding: 3px 0px;
+}
+
+.TopGadget table .Text {
+	font-weight: bold;
+	color: #636363;
+	padding-right: 10px;	
+}
+
+.TopGadget table select {
+	background: #f5f5f5;
+	height: 18px;
+	border: 1px solid #cacaca;
+	color: #838383;
+	font-size: 12px;
+	-moz-border-radius: 2px;
+	width: 110px;
+}
+
+.GadgetGrid .UIGrid {
+	border: 1px solid #ebebeb;
 	border-collapse: collapse;
 	padding-left: 1px;
-	margin: auto;
 	table-layout: fixed;
-	height: 220px;
-	overflow: auto;
+	width: 100%;
 }
 
-.UIGrid thead {
-	border: 1px solid #b7b7b7;
-	background: #fc9;
+.GadgetGrid .UIGrid thead .FieldComponent {
+ border-right: 1px solid #fff;
+ width: 30%;
 }
 
-.UIGrid th {
-	line-height: 19px;
-	border: 1px solid #b7b7b7;
-	background: #d2ddf1 url('/eXoGadgets.Ext/skin/image/ThGridRepeatBg1x19.jpg') repeat-x;
+.GadgetGrid .UIGrid th {
+	background: #ebebeb;
 	font-weight: normal;
-	padding: 0px 4px;
+	line-height: 24px;
+	padding: 0 10px;
 	vertical-align: middle;
+	text-align: left;
+	font-weight: bold;
+	border-bottom: 1px solid #fff;
 }
 
-.UIGrid tbody {
-	padding-bottom: 1px;
+.GadgetGrid .UIGrid tbody {
+padding-bottom:1px;
 }
 
-.UIGrid td {
-  height: 20px; line-height: 20px;
-	border-right: 1px solid #cccccc;
-	border-left: 1px solid #cccccc;
-	border-top: 1px solid white;
-	padding: 4px;
+.GadgetGrid .UIGrid .EvenRow {
+	background: #F5F5F5;
 }
 
-.UIGrid .OddRow {
-	background: #f0f0f0;
+.GadgetGrid .UIGrid .OddRow {
+	background: #fff;
 }
 
-.UIGrid .EvenRow {
-	background: #f5f5f5;
-}
-
-.UIGrid a {
-	margin: 0px 4px;
-	color: #024369;
-}
-
-.UIGrid img {
-	margin: 0px 4px;
-	width: 20px;
+.GadgetGrid .UIGrid td {
+	border-left: 1px solid #ebebeb;
+	border-right: 1px solid #ebebeb;
+	border-top: 1px solid #ebebeb;
 	height: 20px;
-	background-position: center;
-	background-repeat: no-repeat;
-	float: none; 
-	cursor: pointer;
+	line-height: 20px;
+	padding: 4px 10px;
 }
 
-.UIGrid .Text {
+.GadgetGrid .UIGrid .Text {
 	overflow: hidden;
 }
 
-.UIGrid .DeleteIcon {
-	width: auto; height: auto;
-	background: #024369 url('/eXoGadgets.Ext/skin/image/DustBin.gif') no-repeat;
+.GadgetGrid .UIGrid .SkinID {
+	background: #efefef;
+	padding: 0px 5px;
+	-moz-border-radius: 2px 2px 2px 2px;
+}
+
+.GadgetGrid .UIGrid .SkinID input {
+	height: 12px;
+	border: 1px solid #cacaca;
+	width: 80px;
+	font-size: 10px;
+	color: #848383;
+}
+
+.GadgetGrid .UIGrid .ActionContainer {
+	text-align: center;
+	white-space: nowrap;
+}
+
+
+.UIAction {
+	padding: 10px 0px;
+}
+
+.UIAction .ActionContainer {
+	margin: auto;
+	width: auto;
+}
+
+.UIAction .GadgetStyle {
+	float: none;
+	margin: auto;
+}
+
+.UIAction .GadgetStyle .ButtonLeft {
+	background: url("images/GadgetStyle.gif") no-repeat left top;
+	padding-left: 2px;
+}
+
+.UIAction .GadgetStyle .ButtonRight {
+	background: url("images/GadgetStyle.gif") no-repeat right top;
+	padding-right: 2px;
+}
+
+.UIAction .GadgetStyle .ButtonMiddle {
+	background: url("images/GadgetStyle.gif") repeat-x left -24px;
+	line-height: 24px;
+	padding: 0px 10px;
+}
+
+.UIAction .GadgetStyle .ButtonMiddle a {
+	color: #636363;
+	font-weight: bold;
+}
+
+/*********MiniMessage***********/
+.mmlib_table {
+  width: 100%;
+  font: bold 9px arial,sans-serif;
+  background-color: #ffffff;
+  border-collapse: separate;
+  border-spacing: 0px;
+  padding: 1px 0px;
+}
+
+.mmlib_xlink {
+  font: normal 1.1em arial,sans-serif;
+  font-weight: bold;
+  color: #0000cc;
+  cursor: pointer;
 }
